erDiagram
    USERS {
        bigint id PK
        varchar uuid UK
        varchar username UK
        varchar email UK
        varchar password
        varchar role
        boolean enabled
    }

    EVENTS {
        bigint id PK
        varchar uuid UK
        varchar title
        text description
        timestamp start_date
        timestamp end_date
        varchar status
        int max_participants
    }

    REGISTRATIONS {
        bigint id PK
        varchar uuid UK
        bigint user_id FK
        bigint event_id FK
        varchar status
        timestamp registration_date
    }

    TEAMS {
        bigint id PK
        varchar uuid UK
        varchar name
        varchar short_code UK
        bigint event_id FK
        varchar submission_url
        timestamp submission_time
    }

    TEAM_MEMBERS {
        bigint id PK
        varchar uuid UK
        bigint team_id FK
        varchar user_id
        varchar role
        varchar status
    }

    PROBLEM_STATEMENTS {
        bigint id PK
        bigint event_id FK
        varchar title
        text description
    }

    EVALUATIONS {
        bigint id PK
        bigint team_id FK
        varchar criteria
        double score
    }

    USERS ||--o{ REGISTRATIONS : "registers"
    EVENTS ||--o{ REGISTRATIONS : "has"
    EVENTS ||--o{ TEAMS : "hosts"
    EVENTS ||--o{ PROBLEM_STATEMENTS : "defines"
    TEAMS ||--o{ TEAM_MEMBERS : "contains"
    TEAMS ||--o{ EVALUATIONS : "scored_by"